--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav> <!-- Create "nav" to display various menus -->
             <ul>
                 <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Hem </a></li>
-                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
+                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> Seminarier </a></li>
                 <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
                 <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Priser & biljetter </a></li>
-                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
+                <li><a href="#contact"> Kontakta oss <img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
             </ul>
         </nav> 
     </header>
@@ -31,11 +31,9 @@
                 <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
             </div>
             <div class="about-web"> <!-- Konferensinformation -->
-                <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
-                <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
-                <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
+                <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! <br> Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
                     Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
-                    Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
+                    Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. <br> Eventansvariga </p>
             </div>
 
             <!-- Section: Seminarier -->
@@ -149,9 +147,8 @@
                             <div class="allergies-text">
                                 <div class="allergies-text1"><img src="img/food-allergy.png" alt="Image showing food-allergy"></div>
                                 <div class="allergies-text1">
-                                    <h3>Medicinskt larm allergier!</h3>
-                                    <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. </p>
-                                    <p> Tack för ert intresse </p>
+                                    <h3> Medicinskt larm allergier! </h3>
+                                    <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. Tack för ert intresse! </p>
                                 </div>
                             </div>
                             <!-- Using "textarea" for the users can write down a multi-line text input field -->
@@ -268,7 +265,7 @@
                     <div class="social-media"> <!-- Social media -->
                         <ul>
                             <li><img src="img/twitter.png" alt="Image of twitter"> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
-                            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a></li>
+                            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/battrewebb2024 </a></li>
                             <li><img src="img/instagram.png" alt="Image of instagram"> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
                         </ul>
                     </div>
