--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="about-web"> <!-- Konferensinformation -->
                 <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! <br> Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
                     Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
-                    Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. <br> Eventansvariga </p>
+                    Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
             </div>
 
             <!-- Section: Seminarier -->
