--- a/index.html
+++ b/index.html
@@ -269,9 +269,10 @@
     </main>
 </body>
 <footer>
-    <a href="#home" class="home-button"> Hem </a>
+    
     <div class="social-media"> <!-- Social media -->
         <ul>
+            <li><a href="#home" class="home-button"> Hem </a></li>
             <li><img src="img/twitter.png" alt="Image of twitter"> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
             <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/battrewebb2024 </a></li>
             <li><img src="img/instagram.png" alt="Image of instagram"> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
