--- a/index.html
+++ b/index.html
@@ -269,12 +269,19 @@
 </body>
 <footer>
     <div class="social-media"> <!-- Social media -->
-        <ul>
-            <li><a href="#home" class="home-button"> Hem </a></li>
-            <li><img src="img/twitter.png" alt="Image of twitter"> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
-            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/battrewebb2024 </a></li>
-            <li><img src="img/instagram.png" alt="Image of instagram"> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
-        </ul>
+        <a href="#home" class="home-button"> <img src="img/home.png" alt=""></a>
+        <fieldset>
+            <legend><img src="img/twitter.png" alt="Image of twitter"></legend>
+            <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a>
+        </fieldset>
+        <fieldset>
+            <legend><img src="img/linkedin.png" alt="Image of linkedin"></legend>
+            <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/battrewebb2024 </a>
+        </fieldset>
+        <fieldset>
+            <legend><img src="img/instagram.png" alt="Image of instagram"></legend>
+            <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a>
+        </fieldset>
     </div>
 </footer>
 </html>
