Fixed sign up menu

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>    
                 <div class="signup-container">
                     <div class="signup-form"> <!-- Signup-form -->
-                        <p> Fyll i formuläret nedan för att anmäla dig till konferensen. </p> 
+                        <p> Fyll i formuläret för att anmäla dig. </p> 
                         <form action="#" id="registration-form"> <!-- Creating "form" and "action" for the users input their informations -->
                             <!-- Namn -->
                             <label for="name"> Namn: </label>
