Fiexed price menu

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>
                     <div class="ticket-included">
                         <!-- What is included -->
-                        <h3> Vad som ingår </h3>
+                        <p> Vad som ingår </p>
                         <ul> <!-- Using "ul" for making a list -->
                             <li> <img src="img/ghost-pink.png" alt="Image of ghost-pink moving line 1"> Tillgång till alla föreläsningar och workshops. </li>
                             <li> <img src="img/title-pinkghost.png" alt="Image of ghost-pink moving line 2"> Lunch, eftermiddagsfika och middag under respektive dag. </li>
