--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
             <div class="title-menu">
-                <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
+                <div class="title-name"><h2> Bättre Webb 2024 <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
             </div>
             <div class="about-web"> <!-- Konferensinformation -->
                 <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
                 <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
+                <h2> Om Konferensen </h2>
                 <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
                     Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
                     Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
