--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 <li> Eventkoordinator </li>
                                 <li><img src="img/P.png" alt="Image of Photsathon"></li>
                                 <li> Photsathon Karlsson </li>
-                                <li> E-post: <a href="mailto:photsathon.karlsson@battrewebb2024.se"> photsathon.karlsson@battrewebb2024.se </a></li> <!-- link to e-mail -->
+                                <li> E-post: <a href="mailto:photsathon.karlsson@battrewebb2024.se"> p.karlsson@battrewebb2024.se </a></li> <!-- link to e-mail -->
                                 <li> Telefon: +46 70 987 6543 </li>
                             </ul>
                         </div>
@@ -241,7 +241,7 @@
                                 <li> Teknisk chef </li>
                                 <li><img src="img/J.png" alt="Image of Josefin"></li>
                                 <li> Josefin Karlsson </li>
-                                <li> E-post: <a href="mailto:josefin.karlsson@battrewebb2024.se"> josefin.karlsson@battrewebb2024.se </a></li> 
+                                <li> E-post: <a href="mailto:josefin.karlsson@battrewebb2024.se"> j.karlsson@battrewebb2024.se </a></li> 
                                 <li> Telefon: +46 70 123 9876 </li>
                             </ul>
                         </div>
@@ -250,7 +250,7 @@
                                 <li> Projektledare </li>
                                 <li><img src="img/M.png" alt="Image of Mattias"></li>
                                 <li> Mattias Karlsson </li>
-                                <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> mattias.karlsson@battrewebb2024.se </a></li> 
+                                <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> m.karlsson@battrewebb2024.se </a></li> 
                                 <li> Telefon: +46 70 984 8468 </li>
                             </ul>
                         </div>
