Fixed contact menu

--- a/index.html
+++ b/index.html
@@ -222,54 +222,59 @@
                 <div class="title-menu">
                     <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Kontakta oss <img src="img/title-yellowghost.png" alt="Moving yellow-ghost image in title"></h2></div>
                 </div> 
+                <!-- Contact-container -->
                 <div class="contact-container">
                     <div class="contact-betterweb">
                         <p> Bättre Webb 2024 </p>
                     </div>
-                    <div class="organizer"> <!-- Organizer -->    
-                        <div class="person">
-                            <ul>
-                                <li> Eventkoordinator </li>
-                                <li><img src="img/P.png" alt="Image of Photsathon"></li>
-                                <li> Photsathon Karlsson </li>
-                                <li> E-post: <a href="mailto:photsathon.karlsson@battrewebb2024.se"> p.karlsson@battrewebb2024.se </a></li> <!-- link to e-mail -->
-                                <li> Telefon: +46 70 987 6543 </li>
-                            </ul>
-                        </div>
-                        <div class="person">
-                            <ul>
-                                <li> Teknisk chef </li>
-                                <li><img src="img/J.png" alt="Image of Josefin"></li>
-                                <li> Josefin Karlsson </li>
-                                <li> E-post: <a href="mailto:josefin.karlsson@battrewebb2024.se"> j.karlsson@battrewebb2024.se </a></li> 
-                                <li> Telefon: +46 70 123 9876 </li>
-                            </ul>
-                        </div>
-                        <div class="person">
-                            <ul>
-                                <li> Projektledare </li>
-                                <li><img src="img/M.png" alt="Image of Mattias"></li>
-                                <li> Mattias Karlsson </li>
-                                <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> m.karlsson@battrewebb2024.se </a></li> 
-                                <li> Telefon: +46 70 984 8468 </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="contact-info"> <!-- Contact informations -->
+                    <div class="contact-info"> <!-- Contact informations -->  
+                        <h2> Kontaktinformation </h2> 
                         <ul>
                             <li><img src="img/www.png" alt="Image of website"> <a href="http://www.battrewebb2024.se"> www.battrewebb2024.se </a></li>
                             <li><img src="img/email.png" alt="Image of email"> <a href="mailto:info@battrewebb2024.se"> info@battrewebb2024.se </a></li>
                             <li><img src="img/address.png" alt="Image of address"> Svenska Mässan, 412 51 Göteborg, Sverige </li>
                         </ul>
                     </div>
-                    <div class="social-media"> <!-- Social media -->
+                    <div class="social-media"> <!-- Social media --> 
+                        <h2> Sociala medier </h2>
                         <ul>
                             <li><img src="img/twitter.png" alt="Image of twitter"> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
-                            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a></li>
                             <li><img src="img/instagram.png" alt="Image of instagram"> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
+                            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a></li>
+                        </ul>
+                    </div>  
+                </div>
+                <!-- Organizer container -->
+                <h2 class="organizer-title"> Eventansvariga </h2>
+                <div class="organizer"> <!-- Organizer -->  
+                    <div class="person">
+                        <ul>
+                            <li> Eventkoordinator </li>
+                            <li><img src="img/P.png" alt="Image of Photsathon"></li>
+                            <li> Photsathon Karlsson </li>
+                            <li> E-post: <a href="mailto:photsathon.karlsson@battrewebb2024.se"> p.karlsson@battrewebb2024.se </a></li> <!-- link to e-mail -->
+                            <li> Telefon: +46 70 987 6543 </li>
                         </ul>
                     </div>
-                </div>
+                    <div class="person">
+                        <ul>
+                            <li> Teknisk chef </li>
+                            <li><img src="img/J.png" alt="Image of Josefin"></li>
+                            <li> Josefin Karlsson </li>
+                            <li> E-post: <a href="mailto:josefin.karlsson@battrewebb2024.se"> j.karlsson@battrewebb2024.se </a></li> 
+                            <li> Telefon: +46 70 123 9876 </li>
+                        </ul>
+                    </div>
+                    <div class="person">
+                        <ul>
+                            <li> Projektledare </li>
+                            <li><img src="img/M.png" alt="Image of Mattias"></li>
+                            <li> Mattias Karlsson </li>
+                            <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> m.karlsson@battrewebb2024.se </a></li> 
+                            <li> Telefon: +46 70 984 8468 </li>
+                        </ul>
+                    </div>
+                </div>   
             </section>
         </div>
     </main>
