Fixed contact menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Hem </a></li>
                 <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
                 <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
-                <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljettpriser </a></li>
+                <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
                 <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
             </ul>
         </nav>
@@ -162,7 +162,7 @@
             <!-- Section: Priser för biljetter -->
             <section id="price">
                 <div class="title-menu">
-                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Biljettprise <img src="img/title-pinkghost.png" alt="Moving pink-ghost image in title"></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Biljetter <img src="img/title-pinkghost.png" alt="Moving pink-ghost image in title"></h2></div>
                 </div> 
                 <div class="price-form"> <!-- Tickets price & details -->
                     <div class="ticket-price">
