--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <nav class="side-nav"> <!-- Create "nav" to display various menus -->
             <ul>
-                <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Hem </a></li>
+                <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Om Konferensen </a></li>
                 <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
                 <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
                 <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
@@ -27,17 +27,20 @@
         </nav>
         
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
-            <div class="title-menu">
-                <div class="title-name"><h2> Bättre Webb 2024 <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
-            </div>
-            <div class="about-web"> <!-- Konferensinformation -->
-                <h2> Om Konferensen </h2>
-                <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
-                <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
-                <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! <br> Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
-                    Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
-                    Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
-            </div>
+            <!-- Section: Om Konferensen -->
+            <section id="about-conference">
+                <div class="title-menu">
+                    <div class="title-name"><h2> Bättre Webb 2024 <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
+                </div>
+                <div class="about-web"> <!-- Konferensinformation -->
+                    <h2> Om Konferensen </h2>
+                    <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
+                    <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
+                    <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! <br> Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
+                        Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
+                        Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
+                </div>
+            </section>
             <!-- Section: Seminarier -->
             <section id="seminars">
                 <div class="title-menu">
