--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <!-- Header -->
     <header>
-        <section id="home">
+        <section id="about-conference">
             <h1> Bättre Webb 2024 </h1>   
-        </section>  
+        </section> 
     </header>
     <!-- Main -->
     <main>
         <nav class="side-nav"> <!-- Create "nav" to display various menus -->
             <ul>
-                <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Om Konferensen </a></li>
+                <li><a href="#about-conference"> <img src="img/pacman.png" alt="Packman image in nav menu"> Om Konferensen </a></li>
                 <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
                 <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
                 <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
@@ -28,12 +28,11 @@
         
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
             <!-- Section: Om Konferensen -->
-            <section id="about-conference">
+            <section>
                 <div class="title-menu">
-                    <div class="title-name"><h2> Bättre Webb 2024 <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
+                    <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
                 </div>
                 <div class="about-web"> <!-- Konferensinformation -->
-                    <h2> Om Konferensen </h2>
                     <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
                     <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
                     <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! <br> Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
