--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <nav class="side-nav"> <!-- Create "nav" to display various menus -->
             <ul>
-                <li><a href="#about-conference"> <img src="img/pacman.png" alt="Packman image in nav menu"> Om Konferensen </a></li>
-                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
-                <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
+                <li><a href="#about-conference"> <img src="img/pacman.png" alt="Packman image in nav menu"> Konferensen </a></li>
+                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> Seminarier </a></li>
+                <li><a href="#signup"> <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"> Anmälan </a></li>
                 <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
-                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
+                <li><a href="#contact"> <img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"> Kontakt </a></li>
             </ul>
         </nav>
         
