Added home button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                         Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
                         Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
                 </div>
+                 <!-- Home Button -->
+                <div class="home-button-container">
+                    <a href="#top" class="home-button"> Home </a>
+                </div>
             </section>
             <!-- Section: Seminarier -->
             <section id="seminars">
@@ -83,6 +87,10 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+                <!-- Home Button -->
+                <div class="home-button-container">
+                    <a href="#top" class="home-button"> Home </a>
                 </div>
             </section>
             <!-- Section: Anmälan -->
@@ -159,7 +167,11 @@
                             <textarea id="allergies" name="allergies" rows="4" placeholder="Ange eventuella allergier"></textarea>
                             <button type="submit"> Skicka anmälan </button> <!-- Click & send -->
                     </div> 
-                </div>      
+                </div> 
+                <!-- Home Button -->
+                <div class="home-button-container">
+                    <a href="#top" class="home-button"> Home </a>
+                </div>     
             </section>
             <!-- Section: Priser för biljetter -->
             <section id="price">
@@ -217,6 +229,10 @@
                             <li> <img src="img/title-pinkghost.png" alt="Image of ghost-pink moving line 4"> Nätverksmöjligheter med andra utvecklare och branschledare. </li>
                         </ul>
                     </div>
+                </div>
+                <!-- Home Button -->
+                <div class="home-button-container">
+                    <a href="#top" class="home-button"> Home </a>
                 </div>
             </section>
             <!-- Section: Kontakta oss -->
@@ -276,7 +292,11 @@
                             <li> Telefon: +46 70 984 8468 </li>
                         </ul>
                     </div>
-                </div>   
+                </div> 
+                <!-- Home Button -->
+                <div class="home-button-container">
+                    <a href="#top" class="home-button"> Home </a>
+                </div>  
             </section>
         </div>
     </main>
