--- a/index.html
+++ b/index.html
@@ -181,15 +181,18 @@
                 <div class="price-form"> <!-- Tickets price & details -->
                     <div class="ticket-price">
                         <div class="ticket"> <!-- Ticket price for 1 day -->
-                            1-dagsbiljett: <span class="price-ticket">1500 SEK</span>
+                            <p> 1 dagsbiljett </p>
+                            <span class="price-ticket"> 1500 SEK </span>
                             <p>Inkluderar tillgång till alla sessioner under en dag samt lunch, fika och middag.</p>
                         </div>
                         <div class="ticket"> <!-- Ticket price for 2 days -->
-                            2-dagsbiljett: <span class="price-ticket">2800 SEK</span>
+                            <p> 2 dagsbiljett </p>
+                            <span class="price-ticket"> 2800 SEK </span>
                             <p>Inkluderar tillgång till alla sessioner under två dagar samt lunch, fika och middag båda dagarna.</p>
                         </div>
                         <div class="ticket"> <!-- Ticket price for 3 days -->
-                            3-dagsbiljett: <span class="price-ticket">4000 SEK</span>
+                            <p> 3 dagsbiljett </p>
+                            <span class="price-ticket"> 4000 SEK </span>
                             <p>Inkluderar tillgång till alla sessioner under hela konferensen samt lunch, fika och middag alla tre dagarna.</p>
                         </div>
                     </div>
