--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -11,21 +10,20 @@
     <!-- Header -->
     <header>
         <section id="about-conference">
-            <h1> Bättre Webb 2024 </h1>   
+            <h1> Bättre Webb 2024 </h1> 
+            <nav class="side-nav"> <!-- Create "nav" to display various menus -->
+                <ul>
+                    <li><a href="#about-conference"> <img src="img/pacman.png" alt="Packman image in nav menu"> Konferensen </a></li>
+                    <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> Seminarier </a></li>
+                    <li><a href="#signup"> <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"> Anmälan </a></li>
+                    <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
+                    <li><a href="#contact"> <img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"> Kontakt </a></li>
+                </ul>
+            </nav>  
         </section> 
     </header>
     <!-- Main -->
     <main>
-        <nav class="side-nav"> <!-- Create "nav" to display various menus -->
-            <ul>
-                <li><a href="#about-conference"> <img src="img/pacman.png" alt="Packman image in nav menu"> Konferensen </a></li>
-                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> Seminarier </a></li>
-                <li><a href="#signup"> <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"> Anmälan </a></li>
-                <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Biljetter </a></li>
-                <li><a href="#contact"> <img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"> Kontakt </a></li>
-            </ul>
-        </nav>
-        
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
             <!-- Section: Om Konferensen -->
             <section>
@@ -39,10 +37,6 @@
                     Under tre dagar kan du ta del av över 10 seminarier och workshops om de senaste trenderna inom webbutveckling, 
                     design och UX. Fokus ligger på HTML, CSS, JavaScript, UX/UI och optimering av webbsidor. 
                     Perfekt för utvecklare och designers som vill hålla sig uppdaterade! </p>
-                </div>
-                 <!-- Home Button -->
-                <div class="home-button-container">
-                    <a href="#top" class="home-button"> Home </a>
                 </div>
             </section>
             <!-- Section: Seminarier -->
@@ -88,10 +82,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <!-- Home Button -->
-                <div class="home-button-container">
-                    <a href="#top" class="home-button"> Home </a>
                 </div>
             </section>
             <!-- Section: Anmälan -->
@@ -168,10 +158,6 @@
                             <textarea id="allergies" name="allergies" rows="4" placeholder="Ange eventuella allergier"></textarea>
                             <button type="submit"> Skicka </button> <!-- Click & send -->
                     </div> 
-                </div> 
-                <!-- Home Button -->
-                <div class="home-button-container">
-                    <a href="#top" class="home-button"> Home </a>
                 </div>     
             </section>
             <!-- Section: Priser för biljetter -->
@@ -232,10 +218,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Home Button -->
-                <div class="home-button-container">
-                    <a href="#top" class="home-button"> Home </a>
-                </div>
             </section>
             <!-- Section: Kontakta oss -->
             <section id="contact">
@@ -294,13 +276,15 @@
                             <li> Telefon: +46709848468 </li>
                         </ul>
                     </div>
-                </div> 
-                <!-- Home Button -->
-                <div class="home-button-container">
-                    <a href="#top" class="home-button"> Home </a>
-                </div>  
+                </div>      
             </section>
         </div>
     </main>
+    <footer>
+        <!-- Home Button -->
+        <div class="home-button-container">
+            <a href="#top" class="home-button"> <img src="img/home.png" alt="Home"> </a>
+        </div>
+    </footer>
 </body>
 </html>
